--- a/src/css/_settings.scss
+++ b/src/css/_settings.scss
@@ -868,15 +868,15 @@ $input-placeholder-font-color: black;
 // Off Canvas Menu List Variables
 // $off-canvas-label-padding: 0.3rem rem-calc(15);
  $off-canvas-label-color: $secondary-color;
-// $off-canvas-label-text-transform: uppercase;
+ $off-canvas-label-text-transform: uppercase;
 // $off-canvas-label-font-size: rem-calc(12);
 // $off-canvas-label-font-weight: $font-weight-bold;
- $off-canvas-label-bg: $secondary-color;
+ $off-canvas-label-bg: scale-color($primary-color, $lightness: -14%);
  $off-canvas-label-border-top: 1px solid scale-color($off-canvas-label-bg, $lightness: 14%);
 // $off-canvas-label-border-bottom: none;
-// $off-canvas-label-margin:0;
+ $off-canvas-label-margin: 4px;
 // $off-canvas-link-padding: rem-calc(10, 15);
- $off-canvas-link-color: $secondary-color;
+ $off-canvas-link-color: $white;
 // $off-canvas-link-border-bottom: 1px solid scale-color($off-canvas-bg, $lightness: -25%);
 // $off-canvas-back-bg: $tuatara;
 // $off-canvas-back-border-top: $off-canvas-label-border-top;
