Logos and Categories Update

--- a/src/css/_settings.scss
+++ b/src/css/_settings.scss
@@ -132,7 +132,8 @@ $include-html-global-classes: $include-html-classes;
  $pink: #fbdcda;
  $purple: #cabfdf;
  $green: #9cc0a6;
- $blue: #001689;
+ $blue: #bbc6df;
+ $yellow: #dfdbc4;
 
  $white       : #FFFFFF;
  $ghost       : #FAFAFA;
